--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
     "express": "^4.17.3",
+    "js-file-downloader": "^1.1.24",
     "mongoose": "^6.2.8",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
