--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "bcryptjs": "^2.4.3",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "js-file-downloader": "^1.1.24",
     "mongoose": "^6.2.8",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "react": "^17.0.2",
